--- a/style.css
+++ b/style.css
@@ -7,4 +7,245 @@
     padding: 0;
     box-sizing: border-box;
 }
+nav {
+    display: flex;
+    background-color: blueviolet;
+    height: 100px;
+    justify-content: space-between;
+    color: white;
+    padding: 0 50px;
+    align-items: center;
+    font-size: 30px;
+    
+}
 
+ul {
+    display: flex;
+    
+}
+ul li {
+    list-style-type: none;
+    margin: 0 5px;
+}
+ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: shanto;
+    padding: 20px 20px;
+    border-radius: 5px;
+    transition: 0.5s;
+    text-transform: uppercase;
+}
+ul li a:hover {
+    background: rgb(74, 102, 84);
+    
+
+}
+.btn {
+    
+    display: none;
+}
+#check {
+    display: none;
+}
+header {
+    background-image: url(img/closeup-orange-beautiful-flower.jpg);
+    width: 100%;
+    height: 90vh;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+    
+}
+
+
+
+/* main  */
+.First-section {
+    background: rebeccapurple;
+    padding: 100px 0;
+    text-align: center;
+}
+.title {
+    padding: 50px 0;
+    font-size: 30PX;
+    color: white;
+}
+
+.parent-box {
+    width: 1000px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 25px;
+    margin: 0 auto;
+    
+}
+
+
+.single-box {
+    color: white;
+    text-align: center;
+    background: rgb(43, 41, 41);
+    padding: 25px 25px;
+    border-radius: 10px;
+    border: 2px solid green;
+    box-shadow: 5px 5px 5px gray;
+}
+.single-box i{
+    font-size: 30px;
+}
+.single-box h2 {
+    padding: 15px 0;
+}
+
+@media only screen and (Max-width: 688px) {
+    .parent-box {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 10px;
+        width: 100%;
+    }
+    
+}
+
+
+@media only screen and (min-width: 688px)and (max-width: 1099px ) {
+    .parent-box {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 10px;
+        width: 100%;
+    }
+ 
+
+}
+
+
+
+/* Responsive */
+
+@media only screen  and (max-width: 940px) {
+    nav {
+        position: sticky;
+        top: 0;
+    }
+    ul {
+        position: fixed;
+        background: rgb(27, 24, 24);
+        top: 100px;
+        left: -100%;
+        height: 100vh;
+        width: 100%;
+        flex-direction: column;
+        text-align: center;
+        padding-top: 50px;
+        transition: 1s ease;
+        
+    }
+    
+
+
+    ul li {
+        padding: 20px 0;
+
+    }
+    ul li a {
+        font-size: 25px;
+
+    }
+    ul li a:hover {
+        background: none;
+        color: red;
+    }
+    
+    .btn {
+        font-size: 30px;
+        cursor: pointer;
+        display: block;
+    }
+    #check:checked ~ ul {
+        left: 0%;
+    }
+    #check:checked ~ .btn i::before {
+        content: "\f00d";
+    }
+}
+
+
+
+                                /* smart area */
+
+.smart-area{
+    background: rgb(43, 4, 134);
+    padding: 100px 0;
+   
+}
+.smart-area h2:nth-child(1) {
+    text-align: center;
+    color: white;
+    margin-bottom: 50px;
+    font-size: 50px;
+}
+
+.parent-smart {
+    display: flex;
+    margin-left: 200px;
+    margin-right: 200px;
+    justify-content: space-between;
+    color: white;
+    align-items: center;
+}
+.smart-img {
+    text-align: center;
+}
+.smart-img img{
+    width: 400px;
+    height: 400px;
+    text-align: center;
+}
+
+.smart-text h2{
+    padding: 30px 0;
+    font-size: 30px;
+    font-family: shanto;
+}
+.smart-text a {
+    padding: 10px 30px;
+    margin-top: 40px;
+    font-weight: bold;
+    background: red;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 50px;
+    display: inline-block;
+}
+
+
+@media only screen and (max-width: 688px) {
+    .parent-smart {
+        display: block;
+        margin-right: 30px;
+        margin-left: 30px;
+        color: white;        
+    }
+    .smart-img {
+        padding-bottom: 20px;
+    }
+}
+@media only screen and (min-width: 688px)and (max-width: 1099px ) {
+    .parent-smart {
+        display: block;
+        margin-right: 30px;
+        margin-left: 30px;     
+        color: white;
+    }
+    
+    .smart-img {
+        padding-bottom: 20px;
+    }
+}
