--- a/style.css
+++ b/style.css
@@ -445,3 +445,98 @@ header {
        
     }
 }
+
+
+                        /* section-five  */
+
+.form-area {
+    background-image: linear-gradient(#00000075, #00000091), url('img/modern-futuristic-sci-fi-background.jpg');
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    padding: 110px 0;
+}
+form {
+    background: #0b0229;
+    width: 50%;
+    padding: 30px;
+    margin: auto;
+    border: 2px solid #a00a97;
+    color: rgb(255, 255, 255);
+    box-shadow: 1px 1px 25px #ec11a1;
+    border-radius: 10px;
+}
+form h2 {
+   
+    font-size: 35px;
+    font-weight: bolder;
+    text-align: center;
+    padding-bottom: 30px;
+}
+form p {
+    padding-bottom: 30px;
+    text-align: center;
+    letter-spacing: 2px;
+    font-size: 15px;
+}
+.form-input {
+    display: block;
+    border: none;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+    background: none;
+    color: white;
+    outline: none;
+    border-bottom: 1px solid rgb(167, 23, 172);
+    font-size: 18px ;
+    box-shadow: 0px 1px 0 #0ad1ff;
+
+}
+.form-input::placeholder {
+    color: #00c3ffeb;
+}
+
+.sub-form {
+    display: block;
+    margin: 0 auto;
+    padding: 5px 20px;
+    background: #144c58;
+    color: white;
+    outline-color: rgb(119, 0, 255);
+    outline-style: ridge;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 50px;
+    cursor: pointer;
+}
+.sub-form:hover {
+    background: rebeccapurple;
+}
+
+@media only screen and (max-width: 688px) {
+    form {
+        background: #0b0229;
+        width: 90%;
+        padding: 30px;
+        
+        border: 2px solid #a00a97;
+        color: rgb(255, 255, 255);
+        box-shadow: 1px 1px 25px #ec11a1;
+       
+    }
+}
+@media only screen and (min-width: 688px)and (max-width: 1099px ) {
+    form {
+        background: #0b0229;
+        width: 90%;
+        padding: 30px;
+        
+        border: 2px solid #a00a97;
+        color: rgb(255, 255, 255);
+        box-shadow: 1px 1px 25px #ec11a1;
+       
+    }
+}
