--- a/style.css
+++ b/style.css
@@ -540,3 +540,71 @@ form p {
        
     }
 }
+
+
+
+
+                                /* section six  */
+.section-six {
+    background: rgb(56, 102, 98);
+    color: white;
+    padding: 100px 0;
+}
+
+.Uncommit-parent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    margin-left: 200px;
+    margin-right: 200px;
+}                              
+
+.match {
+    border: 3px solid #e2e2e2bd;
+    padding: 20px ;
+}
+.match i {
+    font-size: 40px;
+    padding: 0 20px;
+}
+.match h3 {
+    margin-bottom: 15px;
+    font-size: 25px;
+}
+.match:nth-child(2){
+    border: 3px solid #ffffff;
+}
+.match p {
+    color: rgb(182, 173, 173);
+}
+.br {
+    line-height: 60px;
+}
+
+@media only screen and (max-width: 688px) {
+    .Uncommit-parent {
+        
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            grid-gap: 20px;
+            margin-left: 30px;
+            margin-right: 30px;
+    }  
+
+    .br {
+        text-align: center;
+    }
+}
+@media only screen and (min-width: 688px)and (max-width: 1099px ) {
+    .Uncommit-parent {
+        
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+    .br {
+        text-align: center;
+    }  
+}
