--- a/style.css
+++ b/style.css
@@ -676,3 +676,83 @@ form p {
     }
 
 }
+
+
+                            /* eight section  */
+footer {
+    background: cadetblue;
+    padding: 100px  0 50px 0;
+    color: white;
+}
+.footer-parent {
+    display: flex;
+    margin-left: 200px;
+    margin-right: 200px;
+    gap: 100px;
+    padding: 20px 0;
+   
+}  
+.footer-about {
+    width: 100%;  
+}
+.footer-about:nth-child(2) {
+    padding-left: 200px;
+}
+.footer-about a:nth-child(1) {
+    text-decoration: none;
+    color: white;
+    line-height: 1.5;
+
+}
+.footer-about a:nth-child(n+2){
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    padding: 5px 5px;
+    margin: 0 5px;
+    background: chocolate;
+}
+.footer-about h3 {
+    margin-bottom: 20px;
+}
+.last-footer{
+    border-top: 4px solid rosybrown;
+    text-align: center;
+    font-family: shanto;
+    padding-top: 20px;
+    letter-spacing: 3px;
+    color: black;
+}
+@media only screen and (max-width: 688px) {
+    .footer-parent {
+        display: flex;
+        flex-direction: column;
+        margin-left: 20px;
+        margin-right: 20px;
+        gap: 100px;
+        padding: 20px 0;
+        text-align: center;
+    } 
+    .footer-about:nth-child(2) {
+        padding-left: 0px;
+    }    
+
+}
+@media only screen and (min-width: 688px)and (max-width: 1099px ) {
+    .footer-parent {
+        
+        margin-left: 30px;
+        margin-right: 30px;
+        gap: 100px;
+        padding: 20px 0;
+        
+    }  
+    /* .footer-about {
+        width: 20%; 
+        
+    } */
+    .footer-about:nth-child(2) {
+        padding-left: 0px;
+    }
+   
+}
