--- a/style.css
+++ b/style.css
@@ -192,21 +192,11 @@ header {
 
 .parent-smart {
     display: flex;
-    margin-left: 200px;
-    margin-right: 200px;
     justify-content: space-between;
     color: white;
     align-items: center;
+    margin: 0 200px ;    
 }
-.smart-img {
-    text-align: center;
-}
-.smart-img img{
-    width: 400px;
-    height: 400px;
-    text-align: center;
-}
-
 .smart-text h2{
     padding: 30px 0;
     font-size: 30px;
@@ -227,14 +217,16 @@ header {
 
 
 @media only screen and (max-width: 688px) {
+   
     .parent-smart {
         display: block;
-        margin-right: 30px;
-        margin-left: 30px;
-        color: white;        
+        margin-right: 20px;
+        margin-left: 20px;
+        text-align: center;
     }
-    .smart-img {
-        padding-bottom: 20px;
+    .smart-img img{
+        width: 100%;
+        margin-bottom: 30px;      
     }
 }
 @media only screen and (min-width: 688px)and (max-width: 1099px ) {
@@ -280,6 +272,9 @@ header {
 }
 .vanilla> ul {
     padding: 20px 0;
+}
+.vanilla ul li {
+    list-style-position: inside;
 }
 .vanilla a {
     text-decoration: none;
@@ -329,6 +324,7 @@ header {
     }   
     .vanilla a {
         margin-bottom: 20px;
+        
     }
 
 }
@@ -349,7 +345,7 @@ header {
         margin-bottom: 20px;
         
     }
-}
+} 
 
 
 
@@ -444,12 +440,12 @@ header {
         text-align: center;
        
     }
-}
+} 
 
 
                         /* section-five  */
 
-.form-area {
+ .form-area {
     background-image: linear-gradient(#00000075, #00000091), url('img/modern-futuristic-sci-fi-background.jpg');
     width: 100%;
     background-position: center;
@@ -539,7 +535,7 @@ form p {
         box-shadow: 1px 1px 25px #ec11a1;
        
     }
-}
+} 
 
 
 
@@ -607,13 +603,13 @@ form p {
     .br {
         text-align: center;
     }  
-}
+} 
 
 
 
                             /* seven section  */
 
-.it-parent {
+ .it-parent {
     display: flex;
     margin-right: 200px;
     margin-left: 200px;
@@ -675,11 +671,11 @@ form p {
         margin-bottom: 70px;
     }
 
-}
+} 
 
 
                             /* eight section  */
-footer {
+ footer {
     background: cadetblue;
     padding: 100px  0 50px 0;
     color: white;
@@ -714,6 +710,7 @@ footer {
 }
 .footer-about h3 {
     margin-bottom: 20px;
+    font-size: 20px;
 }
 .last-footer{
     border-top: 4px solid rosybrown;
@@ -723,7 +720,7 @@ footer {
     letter-spacing: 3px;
     color: black;
 }
-@media only screen and (max-width: 688px) {
+ @media only screen and (max-width: 688px) {
     .footer-parent {
         display: flex;
         flex-direction: column;
@@ -741,18 +738,18 @@ footer {
 @media only screen and (min-width: 688px)and (max-width: 1099px ) {
     .footer-parent {
         
-        margin-left: 30px;
-        margin-right: 30px;
+        margin-left: 20px;
+        margin-right: 20px;
         gap: 100px;
-        padding: 20px 0;
-        
-    }  
-    /* .footer-about {
-        width: 20%; 
-        
-    } */
-    .footer-about:nth-child(2) {
+        padding: 20px 0px;
+       
+    } 
+    
+    
+    
+     .footer-about:nth-child(2) {
         padding-left: 0px;
     }
-   
 }
+
+
